1.1.0
-----

* agate can now be used as a drop-in replacement for Python's csv module.
* Migrated csvkit's unicode CSV reading/writing support into agate. (#354)

1.0.1
-----

* TypeTester now takes a "limit" arg that restricts how many rows it tests. (#332)
* Table.from_csv now supports CSVs with neither headers nor manual column names.
* Tables can now be created with automatically generated column names. (#331)
* File handles passed to Table.to_csv are now left open. (#330)
* Added Table.print_csv method. (#307, #339)
* Fixed stripping currency symbols when casting Numbers from strings. (#333)
* Fixed two major join issues. (#336)

1.0.0
------

* Table.from_csv now defaults to TypeTester() if column_info is not provided. (#324)
* New tutorial section: "Navigating table data" (#315)
* 100% test coverage reached. (#312)
* NullCalculationError is now a warning instead of an error. (#311)
* TableSet is now a subclass of MappedSequence.
* Rows and Columns are now subclasses of MappedSequence.
* Add Column.values_without_nulls_sorted().
* Column.get_data_without_nulls() is now Column.values_without_nulls().
* Column.get_data_sorted() is now Column.values_sorted().
* Column.get_data() is now Column.values().
* Columns can now be sliced.
* Columns can now be indexed by row name. (#301)
* Added support for Python 3.5.
* Row objects can now be sliced. (#303)
* Replaced RowSequence and ColumnSequence with MappedSequence.
* Replace RowDoesNotExistError with KeyError.
* Replaced ColumnDoesNotExistError with IndexError.
* Removed unnecessary custom RowIterator, ColumnIterator and CellIterator.
* Performance improvements for Table "forks". (where, limit, etc)
* TableSet keys are now converted to row names during aggregation. (#291)
* Removed fancy __repr__ implementations. Use __str__ instead. (#290)
* Rows can now be accessed by name as well as index. (#282)
* Added row_names argument to Table constructor. (#282)
* Removed Row.table and Row.index properties. (#287)